--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.0",
     "core-js": "^3.4.4",
     "jwt-decode": "^2.2.0",
+    "storage-factory": "^0.1.0",
     "vue": "^2.6.10",
     "vue-notification": "^1.3.20",
     "vue-router": "^3.1.3",
