--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "core-js": "^3.4.4",
+    "axios": "^0.19.1",
+    "core-js": "^3.6.4",
     "jwt-decode": "^2.2.0",
     "storage-factory": "^0.1.0",
     "vue": "^2.6.10",
     "vue-notification": "^1.3.20",
-    "vue-router": "^3.1.3",
-    "vuetify": "^2.1.0",
-    "vuex": "^3.1.2"
+    "vue-router": "^3.1.5",
+    "vuetify": "^2.2.4",
+    "vuex": "^3.1.2",
+    "vuex-map-fields": "^1.3.6"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.12.0",
@@ -27,17 +28,17 @@
     "@vue/cli-plugin-unit-mocha": "^4.1.0",
     "@vue/cli-plugin-vuex": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
-    "@vue/eslint-config-prettier": "^5.0.0",
-    "@vue/test-utils": "1.0.0-beta.29",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/test-utils": "1.0.0-beta.30",
     "babel-eslint": "^10.0.3",
     "chai": "^4.1.2",
-    "eslint": "^5.16.0",
+    "eslint": "^6",
     "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint-plugin-vue": "^6.0.0",
     "prettier": "^1.19.1",
-    "sass": "^1.19.0",
-    "sass-loader": "^8.0.0",
-    "vue-cli-plugin-vuetify": "^2.0.2",
+    "sass": "^1.24.4",
+    "sass-loader": "^8.0.2",
+    "vue-cli-plugin-vuetify": "^2.0.3",
     "vue-template-compiler": "^2.6.10",
     "vuetify-loader": "^1.3.0"
   }
